Updated rebase-min.css and fixed horizontal scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ body {
     color: #FFF;
     font-family:  Arial, Helvetica, Verdana, sans-serif;
     font-size: .8em;
-    text-shadow: 1px 1px 1px #333;
 }
 
 a {
